--- a/Advanced-HTML5/HTML-Forms.html
+++ b/Advanced-HTML5/HTML-Forms.html
@@ -8,6 +8,7 @@
            First Name: <input type="text"><br>
            Last Name: <input type="text"><br>
            Email: <input type="email" required><br>
+           password: <input type="password" min="5"> <br>
             Birthday: <input type="date"> <br>
             Gender: <br>
             <input type="radio" name="gender">Male <br>
