--- a/html5/Self-Closing-HTML-Tags.html
+++ b/html5/Self-Closing-HTML-Tags.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <a href="Anchor-Tag.html"> Go to Anchor Tag</a>
-        <a href="../Advanced-HTML5/Submitting-A-Form.html"></a>
+        <a href="../Advanced-HTML5/Submitting-A-Form.html">Go To Regiter Form</a>
         <ol>
             <li>apple</li>
             <li>mango</li>
