--- a/html5/Self-Closing-HTML-Tags.html
+++ b/html5/Self-Closing-HTML-Tags.html
@@ -4,7 +4,7 @@
         <title>HTML TAGS</title>
     </head>
     <body>
-        <a href="Anchor-Tag.html"> Go to Anchor Tag</a>
+        <a href="Anchor-Tag.html"> Go to Anchor Tag</a> <br>
         <a href="../Advanced-HTML5/Submitting-A-Form.html">Go To Regiter Form</a>
         <ol>
             <li>apple</li>
