--- a/Advanced-HTML5/Submitting-A-Form.html
+++ b/Advanced-HTML5/Submitting-A-Form.html
@@ -8,7 +8,7 @@
            First Name: <input type="text" name="first name"><br>
            Last Name: <input type="text" name="last name"><br>
            Email: <input type="email" required name="email"><br>
-           password: <input type="password" name="password" min="5"> <br>
+           password: <input type="password" name="password"  minlength="5"> <br>
             Birthday: <input type="date" name="birthday"> <br>
             Gender: <br>
             <input type="radio" name="gender" value="male">Male <br>
