--- a/CSS/About3.html
+++ b/CSS/About3.html
@@ -19,9 +19,11 @@
     </header>
     <section>
         <h2>About 3</h2>
+        <img src="https://lh3.googleusercontent.com/eceLfV4oGcABTihI90WAEzOxn-WzwNuDGEkh4fIpmLkW26IwPZtyvgAxjRoTSAqjpz1_iO5kw1NHainnZanyxXs2wWXu-Dhy06WUyWKhUjv6xR4gAqH5BYcm2dUAEdJ_2TIgS9gAbs7QKSSqM4HAKt-gjbpf0N12fODFNZnlHM2Tuy1UTVgvmrhBaB_O7QMzj68JDwPi6chtmtZ7YK6M1JXEwOmFqh4LkizTJZF30ulaogyL_oWg105LVmjADtrBHN8iOUau6iiA9mg6yksya2_qohzwaNn-v3Vv8vxMGJM95rBfImRvIHxaGlKXWgHYDLhupXY3JSkdn-tJZvYMA4kTooxntH3UhLqnVCO7y6j21tLUCoTcUK6zJTqDIXhcHzvQD1gO4IMdVLeaIo0lSbn0-9DaVn6nPdMyNTbf1xVv8-1gRle0c6pKgv08PV8jBFd4IqCTWjnnzYuPuxYSOVtA1fzhM94kTWy0vP24Qjm33UycTo6xYYz_KM7xqGe4PIzTvKcsy4Xlarz38f2P_OgK1EMYTl6WwIvZW43YgKWiCQ1XgD5TdVJXsB8I3GpWq9BJn6KB5EnmmjsUBjcPSK-gMyA5Ks7TpIJG0oVqk8fLkvFHuZis4IKbAjWzCz4l1KZdEwtDN8Fzbyfa9Sr6iFDPAQZPdsyKrpPkxAfxoTjJ40DpfMrxxPk=s757-no" width="200" height="200">
         <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book.
         </p>
     </section>
+    <footer> Web Site Made With Love</footer>
 </body>
 
 </html>
