--- a/CSS/About3.html
+++ b/CSS/About3.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>CSS</title>
-    <link rel="stylesheet" href="style3.css">
+    <link rel="stylesheet" href="Style3.css">
     <link href="https://fonts.googleapis.com/css?family=Zilla+Slab&display=swap" rel="stylesheet">
 </head>
 
