--- a/CSS/Index2.html
+++ b/CSS/Index2.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>CSS</title>
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="Style2.css">
 </head>
 
 <body>
