--- a/CSS/Login.html
+++ b/CSS/Login.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>CSS</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Style.css">
 </head>
 
 <body>
