--- a/CSS/Login1.html
+++ b/CSS/Login1.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>CSS</title>
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="Style1.css">
 </head>
 
 <body>
