--- a/CSS/Login3.html
+++ b/CSS/Login3.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>CSS</title>
-    <link rel="stylesheet" href="style3.css">
+    <link rel="stylesheet" href="Style3.css">
 </head>
 
 <body>
