--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <details> 
         <summary> Bootstrap </summary>
         <ol>
-            <li><a href="./Bootstrap/index.html"></a></li>
+            <li><a href="./Bootstrap/index.html">Bootstrap</a></li>
         </ol>
     </details>
     <details>
